--- a/templates/patient/patient-registration.html
+++ b/templates/patient/patient-registration.html
@@ -13,7 +13,7 @@
                   </div>
                   <h1 class="animated fadeIn">opal <strong>ADMIN</strong></h1>
                 </div>
-              </div>   
+              </div>
             </div>
             <div class="summary-fix">
               <!-- Back button -->
@@ -35,12 +35,12 @@
                   <div class="horz-line" style="height: 16px; text-align: center">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <h2>{{ 'SUMMARY' | translate }}</h2>
-                    </span>  
-                  </div>  
+                    </span>
+                  </div>
                 </div>
               </div>
               <div ng-if="validPatientSearch == 'valid'" class="row">
-                <div class="col-lg-12"> 
+                <div class="col-lg-12">
                   <div class="progress progress-striped active">
                     <div class="progress-bar" ng-class="{'progress-bar-success': stepProgress == 100}" role="progressbar" aria-valuenow="{{stepProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{stepProgress}}%">
                     </div>
@@ -50,7 +50,7 @@
 
               <uib-accordion ng-if="validPatientSearch == 'valid'" class="side-navbar">
 
-                <!-- SECTION: Email --> 
+                <!-- SECTION: Email -->
                 <div uib-accordion-group is-open="emailSection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: validPatientSearch == 'valid'}" is-disabled="!newPatient.email" ng-if="validPatientSearch == 'valid'">
                   <uib-accordion-heading>
                     <div class="row" style="align-items: center">
@@ -95,7 +95,7 @@
                   </uib-accordion-heading>
                 </div>
 
-                <!-- SECTION: Cellphone --> 
+                <!-- SECTION: Cellphone -->
                 <div uib-accordion-group is-open="cellNumberSection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: cellNumberSection.show}" ng-if="cellNumberSection.show" is-disabled="!newPatient.cellNum">
                   <uib-accordion-heading>
                     <div class="row" style="align-items: center">
@@ -170,7 +170,7 @@
                   </uib-accordion-heading>
                 </div>
 
-                <!-- SECTION: Final checks --> 
+                <!-- SECTION: Final checks -->
                 <div uib-accordion-group is-open="finalCheckSection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: finalCheckSection.show}" ng-if="finalCheckSection.show" is-disabled="!idCheck && !consentCheck && !disclaimerCheck && !slaCheck && !opalDocCheck">
                   <uib-accordion-heading>
                     <div class="row" style="align-items: center">
@@ -205,14 +205,14 @@
                 <h1><strong>{{ 'PATIENT_REGISTRATION_TITLE' | translate }}</strong></h1>
               </div>
               <!-- Breadcrumbs -->
-              <div class="col-md-4 title-breadcrumbs"> 
+              <div class="col-md-4 title-breadcrumbs">
                 <span>
-                  <span><a ui-sref="home">Home</a></span> 
+                  <span><a ui-sref="home">Home</a></span>
                   <span class="glyphicon glyphicon-menu-right teflon"></span>
                   <span><strong>{{ 'PATIENT_REGISTRATION_TITLE' | translate }}</strong></span>
                 </span>
               </div>
-            </div>  
+            </div>
             <div class="row mobile-side-panel-menu">
               <div class="back-menu col-xs-12 col-sm-5 col-lg-12">
                 <div class="panel-container animated" ng-class="{pulse: hoverBack}" ng-mouseenter="hoverBack=true" ng-mouseleave="hoverBack=false" style="cursor:pointer;" ng-click="goBack()">
@@ -228,8 +228,8 @@
                 <div class="summary-title" style="text-align: right; margin-bottom: 5px;">
                   <span style="padding: 0 10px;">
                     <h2>{{numOfCompletedSteps}} - {{stepTotal}} Complete</h2>
-                  </span>  
-                </div>  
+                  </span>
+                </div>
                 <div class="progress progress-striped active">
                   <div class="progress-bar" ng-class="{'progress-bar-success': stepProgress == 100}" role="progressbar" aria-valuenow="{{stepProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{stepProgress}}%">
                   </div>
@@ -242,8 +242,8 @@
                     <span style="font-size: 20px;"><strong>{{ 'REGISTER' | translate }}</strong></span>
                   </a>
                 </div>
-              </div> 
-            </div>  
+              </div>
+            </div>
             <div class="section-content">
 
               <!-- SECTION: Patient search -->
@@ -253,8 +253,8 @@
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
                       <h2>{{ 'PATIENT_REGISTRATION_SEARCH_HEADER' | translate }}</h2>
-                    </span>  
-                  </div>  
+                    </span>
+                  </div>
                 </div>
               </div>
               <div class="row">
@@ -305,7 +305,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>  
+                      </div>
                     </div>
                   </uib-accordion>
                 </div>
@@ -324,10 +324,10 @@
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'EMAIL' | translate }} & {{ 'PASSWORD' | translate }}</h2>
-                      </span>  
-                    </div>  
+                      </span>
+                    </div>
                   </div>
-                </div>   
+                </div>
                 <div class="row animated" ng-class="{fadeInUp: validPatientSearch == 'valid'}" ng-if="validPatientSearch == 'valid'">
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
@@ -335,8 +335,8 @@
                       {{ 'PATIENT_REGISTRATION_EMAIL_PASSWORD_DESCRIPTION' | translate }}
                     </p>
                   </div>
-                </div>  
-                <div class="row animated" ng-class="{fadeInUp: validPatientSearch == 'valid'}" ng-if="validPatientSearch == 'valid'"> 
+                </div>
+                <div class="row animated" ng-class="{fadeInUp: validPatientSearch == 'valid'}" ng-if="validPatientSearch == 'valid'">
                   <div class="col-xs-12 col-md-10 col-lg-8">
                     <div class="panel" ng-class="(validEmail.status == 'valid' && validPassword.status == 'valid' && validConfirmPassword.status == 'valid') ? 'panel-success': 'panel-danger'">
                       <div class="panel-heading"><strong>{{ 'EMAIL' | translate }} & {{ 'PASSWORD' | translate }}</strong>
@@ -346,7 +346,7 @@
                       <div class="panel-body form-horizontal">
                         <div class="form-group has-feedback" ng-class="{'has-success': validEmail.status == 'valid', 'has-error': validEmail.status == 'invalid', 'has-warning': validEmail.status == 'warning'}">
                           <label class="control-label col-md-2">
-                            {{ 'EMAIL' | translate }} 
+                            {{ 'EMAIL' | translate }}
                           </label>
                           <div class="col-md-7">
                             <input type="text" class="form-control" required="required" ng-blur="validateEmail(newPatient.email)" ng-change="emailUpdate()" ng-model="newPatient.email" placeholder="example@example.com">
@@ -367,7 +367,7 @@
                           <em class="control-label col-md-3" ng-show="validPassword.status == 'invalid' || validPassword.status == 'warning'" ng-class="{'has-success': validPassword.status == 'valid', 'has-error': validPassword.status == 'invalid', 'has-warning': validPassword.status == 'warning'}" style="text-align:left">
                             {{validPassword.message}}
                           </em>
-                        </div>    
+                        </div>
                         <div class="form-group has-feedback" ng-class="{'has-success': validConfirmPassword.status == 'valid', 'has-error': validConfirmPassword.status == 'invalid', 'has-warning': validConfirmPassword.status == 'warning'}">
                           <label class="control-label col-md-2">
                             {{ 'CONFIRM_PASSWORD' | translate }}
@@ -382,7 +382,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>          
+                  </div>
                 </div>
 
                 <!-- SECTION: Language -->
@@ -392,10 +392,10 @@
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'LANGUAGE' | translate }}</h2>
-                      </span>  
-                    </div>  
+                      </span>
+                    </div>
                   </div>
-                </div>   
+                </div>
                 <div class="row animated" ng-class="{fadeInUp: languageSection.show}" ng-if="languageSection.show">
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
@@ -403,7 +403,7 @@
                       {{ 'PATIENT_REGISTRATION_LANGUAGE_DESCRIPTION' | translate }}
                     </p>
                   </div>
-                </div>  
+                </div>
                 <div class="row animated" style="margin-bottom: 15px;" ng-class="{fadeInUp: languageSection.show}" ng-if="languageSection.show">
                   <div class="col-xs-12 col-sm-9">
                     <div class="row">
@@ -413,7 +413,7 @@
                         </select>
                       </div>
                     </div>
-                  </div>  
+                  </div>
                 </div>
 
                 <!-- SECTION: Cellphone number -->
@@ -423,18 +423,18 @@
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'CELLPHONE_NUMBER' | translate }}</h2>
-                      </span>  
-                    </div>  
+                      </span>
+                    </div>
                   </div>
-                </div>   
+                </div>
                 <div class="row animated" ng-class="{fadeInUp: cellNumberSection.show}" ng-if="cellNumberSection.show">
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
-                      <span><strong>{{ 'OPTIONAL_FIELD' | translate }}:</strong></span>
-                      {{ 'PATIENT_REGISTRATION_CELLPHONE_DESCRIPTION' | translate }}  
+                      <span><strong>{{ 'REQUIRED_FIELD' | translate }}:</strong></span>
+                      {{ 'PATIENT_REGISTRATION_CELLPHONE_DESCRIPTION' | translate }}
                     </p>
                   </div>
-                </div>   
+                </div>
                 <div class="row animated" ng-class="{fadeInUp: cellNumberSection.show}" ng-if="cellNumberSection.show">
                   <div class="col-xs-12 col-sm-9 form-horizontal">
                     <div class="form-group has-feedback" ng-class="{'has-success': validCellNum.status=='valid', 'has-error': validCellNum.status=='invalid'}">
@@ -456,19 +456,19 @@
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'SECURITY_QUESTIONS' | translate }}</h2>
-                      </span>  
-                    </div>  
+                      </span>
+                    </div>
                   </div>
-                </div>   
+                </div>
                 <div class="row animated" ng-class="{faceInUp: securityQuestion1Section.show}" ng-if="securityQuestion1Section.show">
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
                       <span style="color:#d9534f"><strong>{{ 'REQUIRED_FIELD' | translate }}:</strong></span>
-                      {{ 'PATIENT_REGISTRATION_SECURITY_QUESTION_DESCRIPTION' | translate }} 
+                      {{ 'PATIENT_REGISTRATION_SECURITY_QUESTION_DESCRIPTION' | translate }}
                     </p>
                   </div>
-                </div>  
-                <div class="row animated" ng-class="{faceInUp: securityQuestion1Section.show}" ng-if="securityQuestion1Section.show"> 
+                </div>
+                <div class="row animated" ng-class="{faceInUp: securityQuestion1Section.show}" ng-if="securityQuestion1Section.show">
                   <div class="col-xs-12 col-md-8">
                     <div class="panel" ng-class="validAnswer1.status == 'valid' ? 'panel-success': 'panel-danger'">
                       <div class="panel-heading"><strong>{{ 'SECURITY_QUESTION' | translate }} 1</strong>
@@ -485,10 +485,10 @@
                               <option ng-hide="newPatient.securityQuestion1.serial" value="">{{ 'SELECT_QUESTION' | translate }} 1</option>
                             </select>
                           </div>
-                        </div>    
+                        </div>
                         <div class="form-group has-feedback" ng-class="{'has-success': validAnswer1.status == 'valid', 'has-error': validAnswer1.status == 'invalid'}">
                           <label class="control-label col-md-2">
-                            {{ 'ANSWER' | translate }} 
+                            {{ 'ANSWER' | translate }}
                           </label>
                           <div class="col-md-7">
                             <input type="text" class="form-control" required="required" ng-model="newPatient.securityQuestion1.answer" ng-disabled="!newPatient.securityQuestion1.serial" ng-change="validateAnswer1(newPatient.securityQuestion1.answer)" placeholder="">
@@ -500,7 +500,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>          
+                  </div>
                   <div class="col-xs-12 col-md-8">
                     <div class="panel" ng-class="validAnswer2.status == 'valid' ? 'panel-success': 'panel-danger'">
                       <div class="panel-heading"><strong>{{ 'SECURITY_QUESTION' | translate }} 2</strong>
@@ -517,7 +517,7 @@
                               <option ng-hide="newPatient.securityQuestion2.serial" value="">{{ 'SELECT_QUESTION' | translate }} 2</option>
                             </select>
                           </div>
-                        </div>    
+                        </div>
                         <div class="form-group has-feedback" ng-class="{'has-success': validAnswer2.status == 'valid', 'has-error': validAnswer2.status == 'invalid'}">
                           <label class="control-label col-md-2">
                             {{ 'ANSWER' | translate }}
@@ -532,7 +532,7 @@
                         </div>
                       </div>
                     </div>
-                  </div> 
+                  </div>
                   <div class="col-xs-12 col-md-8">
                     <div class="panel" ng-class="validAnswer3.status == 'valid' ? 'panel-success': 'panel-danger'">
                       <div class="panel-heading"><strong>{{ 'SECURITY_QUESTION' | translate }} 3</strong>
@@ -549,7 +549,7 @@
                               <option ng-hide="newPatient.securityQuestion3.serial" value="">{{ 'SELECT_QUESTION' | translate }} 3</option>
                             </select>
                           </div>
-                        </div>    
+                        </div>
                         <div class="form-group has-feedback" ng-class="{'has-success': validAnswer3.status == 'valid', 'has-error': validAnswer3.status == 'invalid'}">
                           <label class="control-label col-md-2">
                             {{ 'ANSWER' | translate }}
@@ -564,7 +564,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>          
+                  </div>
                 </div>
 
                 <!-- SECTION: Access level -->
@@ -574,10 +574,10 @@
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'ACCESS_LEVEL_TITLE' | translate }}</h2>
-                      </span>  
-                    </div>  
+                      </span>
+                    </div>
                   </div>
-                </div>   
+                </div>
                 <div class="row animated" ng-class="{fadeInUp: accessLevelSection.show}" ng-if="accessLevelSection.show">
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
@@ -585,7 +585,7 @@
                       {{ 'ACCESS_LEVEL_DESCRIPTION' | translate }}
                     </p>
                   </div>
-                </div>  
+                </div>
                 <div class="row animated" style="margin-bottom: 15px;" ng-class="{fadeInUp: accessLevelSection.show}" ng-if="accessLevelSection.show">
                   <div class="col-xs-12 col-md-12">
                     <div class="row">
@@ -595,7 +595,7 @@
                         </select>
                       </div>
                     </div>
-                  </div>  
+                  </div>
                 </div>
 
                 <!-- SECTION: Final checks -->
@@ -605,21 +605,21 @@
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
                         <h2>{{ 'FINAL_CHECKS_TITLE' | translate }}</h2>
-                      </span>  
-                    </div>  
+                      </span>
+                    </div>
                   </div>
-                </div>   
+                </div>
                 <div class="row animated" ng-class="{fadeInUp: finalCheckSection.show}" ng-if="finalCheckSection.show">
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
                       <span style="color:#d9534f"><strong>{{ 'REQUIRED_FIELD' | translate }}:</strong></span>
-                      {{ 'FINAL_CHECKS_DESCRIPTION' | translate }} 
+                      {{ 'FINAL_CHECKS_DESCRIPTION' | translate }}
                     </p>
                   </div>
-                </div> 
+                </div>
 
   			  			<div class="row animated" ng-class="{fadeInUp: finalCheckSection.show}" ng-if="finalCheckSection.show">
-                  <div class="col-xs-12 col-sm-9 col-md-9 col-lg-6"> 
+                  <div class="col-xs-12 col-sm-9 col-md-9 col-lg-6">
   									<table class="table table-bordered table-condensed">
   										<col width="15%">
   										<col width="85%">
