--- a/templates/questionnaire/edit.question.html
+++ b/templates/questionnaire/edit.question.html
@@ -11,15 +11,15 @@
             <span class="text-danger fa fa-lock"></span>
             View Question
         </h2>
-        <p class="text-danger">This question has being already sent to patients and cannot be modified anymore. You can still assign it to different libraries.</p>
+        <p class="text-danger">This question has being already sent to patients.</p>
     </div>
     <div class="modal-buttons col-xs-12">
-    <span>
-         <form method="post" ng-submit="updateQuestion()">
-          <input class="btn btn-primary submit" ng-class="" type="submit" value="Save Changes" />
-         <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel" />
-        </form>
-    </span>
+  <span>
+     <form method="post" ng-submit="updateQuestion()">
+     <input class="btn btn-primary submit" type="submit" value="Save Changes" ng-disabled="!checkForm()" />
+     <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel" />
+    </form>
+  </span>
     </div>
 </div>
 <div class="modal-body">
@@ -35,22 +35,22 @@
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
                         <span class="input-group-addon">EN</span>
-                        <textarea class="form-control" rows="2" ng-model="question.text_EN" placeholder="English Title" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final"></textarea>
+                        <input type="text" class="form-control" ng-model="question.text_EN" placeholder="English Title" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final" />
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
                         <span class="input-group-addon">FR</span>
-                        <textarea class="form-control" rows="2" ng-model="question.text_FR" placeholder="Titre Français" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final"></textarea>
+                        <input type="text" class="form-control" ng-model="question.text_FR" placeholder="Titre Français" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final" />
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-6 col-md-6" style="margin-bottom: 20px;">
-                    <label style="font-size: 20px;">Make this question private: <input type="checkbox" ng-model="question.private" ng-disabled="question.readOnly && question.final"></label>
+                    <label style="font-size: 20px;">Make this question private: <input ng-change="setChangesMade()" type="checkbox" ng-model="question.private" ng-disabled="!question.isOwner"></label>
                 </div>
                 <div class="col-xs-6 col-md-6" style="margin-bottom: 20px;">
-                    <label style="font-size: 20px;">Finalize the question: <input type="checkbox" ng-model="question.final" ng-disabled="question.readOnly"></label>
+                    <label style="font-size: 20px;">Finalize the question: <input ng-change="setChangesMade()" type="checkbox" ng-model="question.final" ng-disabled="question.readOnly"></label>
                 </div>
             </div>
         </div>
@@ -63,43 +63,39 @@
                 </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
-                <strong>Current Response Type</strong><br>
-                <p>
-                    <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                    <span>{{question.type_EN}} / {{question.type_FR}}</span>
-                </p>
+                <strong>{{question.type_EN}} / {{question.type_FR}}</strong>
             </div>
 
             <!-- Edit text box options -->
-            <div class="col-xs-12 col-md-8" ng-show="question.typeId === '3'">
+            <div class="col-xs-12 col-md-8" ng-if="question.typeId === '3'">
                 <p> No option.</p>
             </div>
 
             <!-- Edit radio button options -->
-            <div class="col-xs-12 col-md-8" ng-show="question.typeId === '4' || question.typeId === '1'">
+            <div class="col-xs-12 col-md-8" ng-if="question.typeId === '4' || question.typeId === '1'">
                 <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="option in question.subOptions">
-                    <input class="form-control" style="width:20%" type="number" placeholder="Position" ng-model="option.order" required ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:40%" type="text" placeholder="Text (EN)" ng-model="option.description_EN" required ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:40%" type="text" placeholder="Text (FR)" ng-model="option.description_FR" required ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:20%" ng-change="setChangesMade()" type="number" placeholder="Position" ng-model="option.order" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:40%" ng-change="setChangesMade()" type="text" placeholder="Text (EN)" ng-model="option.description_EN" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:40%" ng-change="setChangesMade()" type="text" placeholder="Text (FR)" ng-model="option.description_FR" ng-disabled="question.readOnly || question.final" />
                     <span class="input-group-btn"><button class="btn btn-default" ng-click="deleteOptions(option)" ng-disabled="question.readOnly || question.final"><span class="fa fa-minus"></span> Delete</button></span>
                 </div>
                 <button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addOptions()" ng-disabled="question.readOnly || question.final"><span class="fa fa-plus"></span> Add option</button>
             </div>
 
             <!-- Edit Sliders options -->
-            <div class="col-xs-12 col-md-8" ng-show="question.typeId === '2'">
+            <div class="col-xs-12 col-md-8" ng-if="question.typeId === '2'">
                 <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                    <input class="form-control" style="width:20%" type="number" placeholder="Minimum value" ng-model="toMinValue" required ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:35%" type="text" ng-model="question.options.minCaption_EN" placeholder="Minimum caption (EN)" required ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:35%" type="text" ng-model="question.options.minCaption_FR" placeholder="Minimum caption (FR)" required ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:20%" ng-change="setChangesMade()" type="number" placeholder="Minimum value" ng-model="question.options.minValue" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:35%" ng-change="setChangesMade()" type="text" ng-model="question.options.minCaption_EN" placeholder="Minimum caption (EN)" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:35%" ng-change="setChangesMade()" type="text" ng-model="question.options.minCaption_FR" placeholder="Minimum caption (FR)" ng-disabled="question.readOnly || question.final" />
                 </div>
                 <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                    <input class="form-control" style="width:20%" type="number" placeholder="Maximum value" ng-model="toMaxValue" required ng-disabled="question.readOnly == '1'" />
-                    <input class="form-control" style="width:35%" type="text" ng-model="question.options.maxCaption_EN" placeholder="Maximum caption (EN)" required ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:35%" type="text" ng-model="question.options.maxCaption_FR" placeholder="Maximum caption (FR)" required ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:20%" ng-change="setChangesMade()" type="number" placeholder="Maximum value" ng-model="question.options.maxValue" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:35%" ng-change="setChangesMade()" type="text" ng-model="question.options.maxCaption_EN" placeholder="Maximum caption (EN)" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:35%" ng-change="setChangesMade()" type="text" ng-model="question.options.maxCaption_FR" placeholder="Maximum caption (FR)" ng-disabled="question.readOnly || question.final" />
                 </div>
                 <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                    <input class="form-control" style="width:20%" type="number" placeholder="Increment step" ng-model="toIncrement" required ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:20%" type="number" placeholder="Increment step" ng-model="question.options.increment" ng-disabled="question.readOnly || question.final" />
                 </div>
             </div>
         </div>
@@ -120,7 +116,7 @@
                     <ul class="list-items">
                         <li ng-repeat="library in libraryFilterList| filter: searchLibFilter">
                             <label>
-                                <input type="checkbox" name="library[]" value="{{library.serNum}}" ng-checked="library.checked == 1" ng-click="updateLibrary(library)" />
+                                <input type="checkbox" name="library[]" value="{{library.serNum}}" ng-checked="selectedLibrary.indexOf(library.serNum) != -1" ng-click="updateLibrary(library)"  />
                                 {{library.name_EN}} / {{library.name_FR}}
                             </label>
                         </li>
@@ -136,12 +132,12 @@
 
                         <form name="newLibForm">
                             <div class="col-md-2" style="margin-top:8px; margin-bottom:5px; font-size:20px;">
-                                <label>Private:  <input type="checkbox" ng-model="newLibrary.private" ng-true-value="1" ng-false-value="0"></label>
+                                <label>Private: <input type="checkbox" ng-model="newLibrary.private" ng-true-value="1" ng-false-value="0"></label>
                             </div>
                             <div class="col-md-8">
                                 <div class="input-group">
-                                    <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_EN" placeholder="New Library (EN)" ng-disabled="librarySelected" required/>
-                                    <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_FR" placeholder="New Library (FR)" ng-disabled="librarySelected" required/>
+                                    <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_EN" placeholder="New Library (EN)" ng-disabled="librarySelected" />
+                                    <input class="form-control" style="width:50%" type="text" ng-model="newLibrary.name_FR" placeholder="New Library (FR)" ng-disabled="librarySelected" />
                                     <span class="input-group-btn"><button class="btn btn-default" type="submit" ng-click="addNewLib()" ng-disabled="newLibForm.$invalid">Add</button></span>
                                 </div>
                             </div>
