--- a/templates/alias/alias.html
+++ b/templates/alias/alias.html
@@ -16,7 +16,7 @@
                         </div>
                         <!-- Breadcrumbs -->
                         <div class="col-md-3 title-breadcrumbs">
-                            <span><a ui-sref="home">{{'ALIAS.BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'ALIAS.LIST.TITLE'|translate}}</strong></span>
+                            <span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'ALIAS.LIST.TITLE'|translate}}</strong></span>
                         </div>
                     </div>
                     <div class="row clearfix operations">
